<resources>
    <string name="app_name">VoiceAlarm</string>
    <string name="message_text">...</string>
    <string name="button_text">Change!</string>
    <string name="record_button_text">record start!</string>
    <string name="stop_record">record stop!</string>
    <string name="start_playing_button">play start!</string>
    <string name="stop_playing_button">play stop!</string>
</resources>
